ssup2ket-auth/overlays/prod/debezium_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssup2ket-auth-debezium-deployment
spec:
  template:
    spec:
      containers:
      - name: debezium-connector
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "! curl http://$(hostname):8083/connectors/ssup2ket-auth/status 2>/dev/null | grep -q \"state\":\"FAILED\""]
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 30s && curl -XPOST -H 'Content-Type:application/json' http://$(hostname):8083/connectors/ -d@/etc/debezium/connector.json"]
