ssup2ket-auth/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssup2ket-auth-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    spec:
      containers:
      - name: ssup2ket-auth
        image: ssup2/ssup2ket-auth:0.1
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
