ssup2ket-auth/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ssup2ket-auth-virtualservice
spec:
  hosts:
  - "192.168.0.38"
